--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 html, body {
   height: 100%;
+  scroll-behavior: smooth;
+  cursor: auto;
 }
 
 :root {
@@ -66,7 +68,7 @@ html, body {
   height: fit-content;
   justify-content: space-between;
   border-bottom: 1px solid var(--border-colour);
-  position: fixed;
+  position: relative;
   user-select: none;
 }
 
@@ -95,14 +97,48 @@ html, body {
   vertical-align: middle;
   line-height: 24px;
   font-weight: 400;
-  color: var(--subtle-text);
+  color: var(--subtle-text) !important;
 }
 
-.titlebar\:lower {
+.titlebar\:text\:semibold {
+  text-align: center;
+  vertical-align: middle;
+  line-height: 24px;
+  font-weight: 500;
+  color: var(--subtle-text) !important;
+}
+
+.titlebar\:toolbar {
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  height: fit-content;
+  background: var(--titlebar-colour);
+  position: relative;
+  overflow-x: hidden;
+  border-bottom: 1px solid var(--border-colour);
+  scroll-behavior: smooth;
+}
+
+.titlebar\:toolbar > * {
+  margin-left: 0px;
+  margin-right: 7px;
+}
+
+.titlebar\:toolbar > span {
+  margin-left: 7px;
+  margin-right: 7px;
+}
+
+.titlebar\:toolbar > *:last-child {
+  margin-right: 0px;
+}
+
+.titlebar\:display {
   background: var(--titlebar-lower-colour);
   width: 100%;
-  position: fixed;
-  margin-top: 35px;
+  position: relative;
   height: 24px;
   border-bottom: 1px solid var(--border-colour);
   padding-left: 12px;
@@ -110,11 +146,11 @@ html, body {
   user-select: none;
 }
 
-.titlebar\:lower\:right {
+.titlebar\:display\:right {
   float: right;
 }
 
-.titlebar\:lower\:left {
+.titlebar\:display\:left {
   float: left;
 }
 
@@ -124,7 +160,6 @@ html, body {
   flex-grow: 1;
   color: var(--regular-text);
   overflow: none;
-  margin-top: calc(35px + 24px);
 }
 
 .texteditor {
@@ -136,10 +171,9 @@ html, body {
   width: 100%;
   height: 100%;
   resize: none;
-  padding: 15px;
+  padding: 10px;
   line-height: 2.5ch;
   color: var(--regular-text);
-  cursor: auto;
 }
 
 .texteditor\:nowrap {
