--- a/src/index.css
+++ b/src/index.css
@@ -113,12 +113,14 @@ html, body {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  height: fit-content;
+  height: 35px;
+  max-height: 35px;
   background: var(--titlebar-colour);
   position: relative;
   overflow-x: hidden;
   border-bottom: 1px solid var(--border-colour);
   scroll-behavior: smooth;
+  user-select: none;
 }
 
 .titlebar\:toolbar > * {
