--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html, body {
   height: 100%;
   scroll-behavior: smooth;
   cursor: auto;
+  overflow: hidden;
 }
 
 :root {
@@ -38,6 +39,22 @@ html, body {
 
   --regular-text: var(--black);
   --subtle-text: var(--gray1);
+
+  --sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  --serif: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  --monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+}
+
+.sans\:serif {
+  font-family: var(--sans-serif);
+}
+
+.serif {
+  font-family: var(--serif);
+}
+
+.monospace {
+  font-family: var(--monospace);
 }
 
 .bp4-dark {
@@ -100,12 +117,18 @@ html, body {
   color: var(--subtle-text) !important;
 }
 
-.titlebar\:text\:semibold {
+.titlebar\:toolbar\:text {
   text-align: center;
   vertical-align: middle;
   line-height: 24px;
   font-weight: 500;
   color: var(--subtle-text) !important;
+  white-space: nowrap;
+}
+
+.titlebar\:icon {
+  padding-left: 7px;
+  padding-right: 7px;
 }
 
 .titlebar\:toolbar {
@@ -199,6 +222,51 @@ html, body {
   line-height: 2.5ch;
   color: var(--regular-text);
   cursor: auto;
+  font-size: 14px;
+}
+
+.texteditor\:fontsize\:-5 {
+  font-size: 4px;
+}
+
+.texteditor\:fontsize\:-4 {
+  font-size: 6px;
+}
+
+.texteditor\:fontsize\:-3 {
+  font-size: 8px;
+}
+
+.texteditor\:fontsize\:-2 {
+  font-size: 10px;
+}
+
+.texteditor\:fontsize\:-1 {
+  font-size: 12px;
+}
+
+.texteditor\:fontsize\:0 {
+  font-size: 14px;
+}
+
+.texteditor\:fontsize\:1 {
+  font-size: 16px;
+}
+
+.texteditor\:fontsize\:2 {
+  font-size: 18px;
+}
+
+.texteditor\:fontsize\:3 {
+  font-size: 20px;
+}
+
+.texteditor\:fontsize\:4 {
+  font-size: 22px;
+}
+
+.texteditor\:fontsize\:5 {
+  font-size: 24px;
 }
 
 ::-webkit-scrollbar {
