--- a/src/test.css
+++ b/src/test.css
@@ -1,61 +1,364 @@
-.topbar-1 {
-    height: 35px;
-    background: var(--body-colour);
-    display: flex;
-    flex-direction: row;
-    padding: 5px 5px 5px 5px;
-  }
-  
-  .topbar-1 > * {
-    height: 24px;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .topbar-1 > .flex-left > *:not(:first-child),
-  .topbar-1 > .flex-right > *:not(:last-child) {
-    margin-left: 3.5px;
-    margin-right: 3.5px;
-  }
-  
-  .topbar-1 > .flex-left > *:first-child {
-    margin-right: 3.5px;
-  }
-  
-  .topbar-1 > .flex-right > *:first-child {
-    margin-left: 3.5px;
-  }
-  
-  .flex-left {
-    margin-right: auto;
-  }
-  
-  .flex-right {
-    margin-left: auto;
-  }
-  
-  .topbar-button {
-    background: none;
-    border: none;
-    border-radius: 4px;
-    padding-left: 9px;
-    padding-right: 9px;
-    width: fit-content;
-    height: 26px;
-    cursor: pointer;
-    color: var(--subtle-text);
-    font-weight: 500; 
-    transition-duration: 75ms;
-  }
-  
-  .topbar-button:hover {
-    background: rgba(255, 255, 255, 0.05)
-  }
-  
-  .topbar-text {
-    text-align: center;
-    vertical-align: middle;
-    line-height: 24px;
-    font-weight: 400;
-    color: var(--subtle-text) !important;
-  }
+:root {
+  --sans: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --monospace: Consolas, monaco, 'Ubuntu Mono', 'Liberation Mono', 'Courier New', Courier, monospace;
+}
+
+html[data-theme=light] {
+	--text-1: #000000;
+	--text-2: #1A1A1A;
+
+	--background-1: #FFFFFF;
+	--background-2: #F6F8FA;
+	--background-3: #E5E7EB;
+
+	--accent-1: #0070F3;
+	--accent-2: #0366D6;
+  --accent-text: #FFFFFF;
+}
+
+html[data-theme=dark] {
+	--text-1: #FFFFFF;
+	--text-2: #EEEEEE;
+
+	--background-1: #000000;
+	--background-2: #111111;
+	--background-3: #222222;
+
+	--accent-1: #2563FF;
+	--accent-2: #2159E6;
+  --accent-text: #FFFFFF;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+}
+
+address,
+area,
+article,
+aside,
+audio,
+blockquote,
+datalist,
+details,
+dl,
+fieldset,
+figure,
+form,
+input,
+iframe,
+img,
+meter,
+nav,
+ol,
+optgroup,
+option,
+output,
+p,
+pre,
+progress,
+ruby,
+section,
+table,
+textarea,
+ul,
+video {
+	/* Margins for most elements */
+	margin-bottom: 1rem;
+}
+
+html,input,select,button {
+	/* Set body font family and some finicky elements */
+	font-family: var(--nc-font-sans);
+}
+
+body {
+	/* Center body in page */
+	margin: 0 auto;
+	max-width: 750px;
+	padding: 2rem;
+	border-radius: 6px;
+	overflow-x: hidden;
+	word-break: break-word;
+	overflow-wrap: break-word;
+	background: var(--nc-bg-1);
+
+	/* Main body text */
+	color: var(--nc-tx-2);
+	font-size: 1.03rem;
+	line-height: 1.5;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	line-height: 1;
+	color: var(--nc-tx-1);
+	padding-top: .875rem;
+}
+
+h1,
+h2,
+h3 {
+	color: var(--nc-tx-1);
+	padding-bottom: 2px;
+	margin-bottom: 8px;
+	border-bottom: 1px solid var(--nc-bg-2);
+}
+
+h4,
+h5,
+h6 {
+	margin-bottom: .3rem;
+}
+
+h1 {
+	font-size: 2.25rem;
+}
+
+h2 {
+	font-size: 1.85rem;
+}
+
+h3 {
+	font-size: 1.55rem;
+}
+
+h4 {
+	font-size: 1.25rem;
+}
+
+h5 {
+	font-size: 1rem;
+}
+
+h6 {
+	font-size: .875rem;
+}
+
+a {
+	color: var(--nc-lk-1);
+}
+
+a:hover {
+	color: var(--nc-lk-2);
+}
+
+abbr:hover {
+	/* Set the '?' cursor while hovering an abbreviation */
+	cursor: help;
+}
+
+blockquote {
+	padding: 1.5rem;
+	background: var(--nc-bg-2);
+	border-left: 5px solid var(--nc-bg-3);
+}
+
+abbr {
+	cursor: help;
+}
+
+blockquote *:last-child {
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
+header {
+	background: var(--nc-bg-2);
+	border-bottom: 1px solid var(--nc-bg-3);
+	padding: 2rem 1.5rem;
+	
+	/* This sets the right and left margins to cancel out the body's margins. It's width is still the same, but the background stretches across the page's width. */
+
+	margin: -2rem calc(50% - 50vw) 2rem;
+
+	/* Shorthand for:
+	margin-top: -2rem;
+	margin-bottom: 2rem;
+	margin-left: calc(50% - 50vw);
+	margin-right: calc(50% - 50vw); */
+
+	padding-left: calc(50vw - 50%);
+	padding-right: calc(50vw - 50%);
+}
+
+header h1,
+header h2,
+header h3 {
+	padding-bottom: 0;
+	border-bottom: 0;
+}
+
+header > *:first-child {
+	margin-top: 0;
+	padding-top: 0;
+}
+
+header > *:last-child {
+	margin-bottom: 0;
+}
+
+a button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+	font-size: 1rem;
+	display: inline-block;
+	padding: 6px 12px;
+	text-align: center;
+	text-decoration: none;
+	white-space: nowrap;
+	background: var(--accent-1);
+	color: var(--accent-text);
+	border: 0;
+	border-radius: 4px;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
+a button[disabled],
+button[disabled],
+input[type="submit"][disabled],
+input[type="reset"][disabled],
+input[type="button"][disabled] {
+	cursor: default;
+	opacity: .5;
+	cursor: not-allowed;
+}
+
+.button:focus,
+.button:enabled:hover,
+button:focus,
+button:enabled:hover,
+input[type="submit"]:focus,
+input[type="submit"]:enabled:hover,
+input[type="reset"]:focus,
+input[type="reset"]:enabled:hover,
+input[type="button"]:focus,
+input[type="button"]:enabled:hover {
+	background: var(--accent-2);
+}
+
+a img {
+	margin-bottom: 0px;
+}
+
+code, pre, kbd {
+	font-family: var(--nc-font-mono);
+}
+
+code, kbd, pre {
+	background: var(--background-2);
+	border: 1px solid var(--background-3);
+	border-radius: 4px;
+	padding: 3px 6px;
+	font-size: 0.9em;
+}
+
+kbd {
+	border-bottom: 3px solid var(--background-3);
+}
+
+pre {
+	padding: 1rem 1.4rem;
+	max-width: 100%;
+	overflow: auto;
+}
+
+code pre, pre code {
+	background: inherit;
+	font-size: inherit;
+	color: inherit;
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+code pre {
+  display: inline;
+}
+
+details {
+	padding: .6rem 1rem;
+	background: var(--background-2);
+	border: 1px solid var(--background-3);
+	border-radius: 4px;
+}
+
+summary {
+	cursor: pointer;
+	font-weight: bold;
+}
+
+details[open] {
+	padding-bottom: .75rem;
+}
+
+details[open] summary {
+	margin-bottom: 6px;
+}
+
+details[open]>*:last-child {
+	margin-bottom: 0;
+}
+
+dt {
+	font-weight: bold;
+}
+
+dd::before {
+	content: '→ ';
+}
+
+hr {
+	border: 0;
+	border-bottom: 1px solid var(--background-3);
+	margin: 1rem auto;
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%
+}
+
+td, th {
+	border: 1px solid var(--background-3);
+	text-align: left;
+	padding: 0.5rem;
+}
+
+th, tr:nth-child(even) {
+	background: var(--background-2);
+}
+
+table caption {
+	font-weight: bold;
+	margin-bottom: .5rem;
+}
+
+ul, ol {
+  padding-left: 2rem;
+  margin-bottom: 0px;
+}
+
+li {
+  margin-top: 0.4rem;
+}
+
+mark {
+	padding: 3px 6px;
+	background: var(--accent-1);
+	color: var(--accent-text);
+}
+
+textarea, select, input {
+	padding: 6px 12px;
+	margin-bottom: .5rem;
+	background: var(--background-2);
+	color: var(--text-2);
+	border: 1px solid var(--background-3);
+	border-radius: 4px;
+	box-shadow: none;
+	box-sizing: border-box;
+}
